--- a/Delegate/cDelegate/cDelegate.csproj
+++ b/Delegate/cDelegate/cDelegate.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Source\ExamineInvoke.cs" />
+    <Compile Include="Source\Predicator.cs" />
     <Compile Include="Source\Types.cs" />
     <Compile Include="Source\Multi.cs" />
     <Compile Include="Source\Program.cs" />
