--- a/CS60DN46/Ch34MVC/MVC2/AutoLotDAL/AutoLotDAL.csproj
+++ b/CS60DN46/Ch34MVC/MVC2/AutoLotDAL/AutoLotDAL.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Inventory.cs" />
     <Compile Include="Models\Order.cs" />
+    <Compile Include="Models\Partials\InventoryPartial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
