--- a/CS60DN46/Ch34MVC/MVC2/AutoLotDAL/App.config
+++ b/CS60DN46/Ch34MVC/MVC2/AutoLotDAL/App.config
@@ -9,4 +9,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="AutoLotEntities" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=AutoLotDAL.EF.AutoLot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!-- orig Ch23
+    <add name="AutoLotConnection"
+      connectionString="data source=(Local);initial catalog=AutoLot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient"/>
+    -->
+  </connectionStrings>
 </configuration>
