--- a/CS60DN46/Ch34MVC/MVC2/AutoLotDAL/AutoLotDAL.csproj
+++ b/CS60DN46/Ch34MVC/MVC2/AutoLotDAL/AutoLotDAL.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Models\Partials\InventoryPartial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\BaseRepo.cs" />
+    <Compile Include="Repos\InventoryRepo.cs" />
     <Compile Include="Repos\IReop.cs" />
   </ItemGroup>
   <ItemGroup>
