db name is AutoLot5

--- a/CS60DN46/Ch34MVC/MVC2/AutoLotDAL/App.config
+++ b/CS60DN46/Ch34MVC/MVC2/AutoLotDAL/App.config
@@ -10,7 +10,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="AutoLotEntities" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=AutoLotDAL.EF.AutoLot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="AutoLotEntities" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=AutoLot5;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <!-- orig Ch23
     <add name="AutoLotConnection"
       connectionString="data source=(Local);initial catalog=AutoLot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
