--- a/CS60DN46/Ch34MVC/MVC2/AutoLotTestDrive/App.config
+++ b/CS60DN46/Ch34MVC/MVC2/AutoLotTestDrive/App.config
@@ -12,4 +12,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+
+  <connectionStrings>
+    <add name="AutoLotConnection" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=AutoLot5;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
 </configuration>
