--- a/CS60DN46/Ch34MVC/MVC2/AutoLotTestDrive/AutoLotTestDrive.csproj
+++ b/CS60DN46/Ch34MVC/MVC2/AutoLotTestDrive/AutoLotTestDrive.csproj
@@ -60,6 +60,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AutoLotDAL\AutoLotDAL.csproj">
+      <Project>{de2fc2a2-ddec-4042-afd8-515de324d3b4}</Project>
+      <Name>AutoLotDAL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
