--- a/CS60DN46/Ch34MVC/MVC2/CarLotMVC2/Web.config
+++ b/CS60DN46/Ch34MVC/MVC2/CarLotMVC2/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CarLotMVC2-20210510113122.mdf;Initial Catalog=aspnet-CarLotMVC2-20210510113122;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="AutoLotEntities" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=AutoLot5;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
