--- a/CS60DN46/Ch34MVC/WebAPI/CarLotWebAPI/Web.config
+++ b/CS60DN46/Ch34MVC/WebAPI/CarLotWebAPI/Web.config
@@ -44,4 +44,8 @@
       <compiler extension=".vb" language="vb;vbs;visualbasic;vbscript" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=3.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </compilers>
   </system.codedom>
+  <connectionStrings>
+    <add name="AutoLotConnection" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=AutoLot5;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
 </configuration>
