--- a/CS60DN46/Ch34MVC/WebAPI/CarLotWebAPI/CarLotWebAPI.csproj
+++ b/CS60DN46/Ch34MVC/WebAPI/CarLotWebAPI/CarLotWebAPI.csproj
@@ -106,6 +106,12 @@
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\MVC2\AutoLotDAL\AutoLotDAL.csproj">
+      <Project>{de2fc2a2-ddec-4042-afd8-515de324d3b4}</Project>
+      <Name>AutoLotDAL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
