--- a/CS60DN46/Ch34MVC/WebAPI/CarLotWebAPI2/packages.config
+++ b/CS60DN46/Ch34MVC/WebAPI/CarLotWebAPI2/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="10.1.1" targetFramework="net472" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
