--- a/Classes/cSerialize/cSerialize.csproj
+++ b/Classes/cSerialize/cSerialize.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Mapping.cs" />
+    <Compile Include="Source\Mapping.cs" />
     <Compile Include="Source\ChkSerialize.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\Program.cs" />
