--- a/Classes/cProperty/cProperty.csproj
+++ b/Classes/cProperty/cProperty.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Compile Include="Source\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Source\PropertyAsParameter.cs" />
     <Compile Include="Source\Pv2.cs" />
     <Compile Include="Source\Pv3.cs" />
   </ItemGroup>
