--- a/Variables/Parsings/Parsings.csproj
+++ b/Variables/Parsings/Parsings.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Partial.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="String2Uint.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
