--- a/Variables/cEnum/cEnum.csproj
+++ b/Variables/cEnum/cEnum.csproj
@@ -40,6 +40,9 @@
     <Compile Include="Source\Default.cs" />
     <Compile Include="Source\Program.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
