--- a/Methods/cRegex/cRegex.csproj
+++ b/Methods/cRegex/cRegex.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\NPVRegex.cs" />
     <Compile Include="Source\Replace.cs" />
+    <Compile Include="Source\Reverse.cs" />
     <Compile Include="Source\TimeRegex.cs" />
     <Compile Include="Source\Webvtt.cs" />
     <Compile Include="Source\WorkRegex.cs" />
